--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 pandas 
 mlflow
-notebook
+notebook==6.5.6
 numpy
 scikit-learn
 matplotlib
 seaborn
+jupyter-server==1.24.0
 python-box
 pyYAML
 tqdm
@@ -13,4 +14,7 @@ joblib
 types-pyYAML
 flask
 flask-cors
+pandas
 python-dotenv
+ensure
+ipykernel
